fix: alignment

--- a/src/components/Card1/Card1.css
+++ b/src/components/Card1/Card1.css
@@ -44,6 +44,10 @@
 }
 .Right-Card .product-info-content {
   margin-top: 57px;
+  display: flex;
+  align-items: center;
+  align-self: center;
+  flex-direction: column;
 }
 .Right-Card .product-info-content h3 {
   font-size: 1.4rem;
@@ -54,13 +58,14 @@
   color: #7b3c93;
 }
 .Right-Card .product-info-content p {
-  margin-top: 30px;
+  /* margin-top: 30px; */
   /* font-family: "Urbanist"; */
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 32px;
+  line-height: 30px;
   letter-spacing: 0.2px;
   color: #000000;
-  padding: 20px 20px 20px 0px;
+
+  /* padding: 20px 20px 20px 0px; */
 }
